make docker work

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
-# docker info
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=ap-northeast-1
+AWS_BUCKET=aces-vision
 CUDA_VISIBLE_DEVICES=0
-DOCKER_IMAGE=project-senario-generator-dev
+DOCKER_IMAGE=scenario-generator
 DOCKER_SHM_SIZE=4g
 # CPU: runc, GPU: nvidia
 DOCKER_RUNTIME=nvidia
-# If you use Delta Proprietary Server, you can use `/datadrive` as HOST_DATADRIVE.
-HOST_DATADRIVE=~/datadrive
-# server data mount point (sagemaker: /opt/ml/model)
-DATA_PATH=/opt/ml/model
+HOST_DATADRIVE=/datadrive
 # Mac: /run/host-services/ssh-auth.sock, Other: /ssh-agent
 DOCKER_SSH_AUTH_SOCK=/ssh-agent
+REGISTERS_BUCKET=aces-vision
+REGISTERS_HOST=http://registers:8000
+REGISTERS_PORT=8010
