--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,37 @@ repository = "https://github.com/koki-asami/senario-generator.git"
 # packages = [{ include = "project_scenario-generator" }]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.9"
-japanize_matplotlib = "*"
-langchain = "*"
-numpy = "1.23.3"
-opencv-contrib-python-headless = "*"
+python = ">=3.8.1,<4.0"
+numpy = "*"
 pandas = "*"
-Pillow = "*"
 PyYAML = "*"
-scikit-learn = ">=0.23.1"
+scipy = "*"
+scikit-learn = "*"
+tensorboard = "*"
+torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.10.2%2Bcu111-cp38-cp38-linux_x86_64.whl", python = ">=3.8,<3.9"}
 tqdm = "*"
-xlrd = "*"
+mecab-python3 = "0.996.5"
+ja-ginza = ">=5.1.0"
+blis = ">=0.7.5"
+wikipedia2vec = "1.0.5"
+suji = ">=0.1.0"
+ja-ginza-electra = ">=5.1.0"
+spacy-transformers = ">=1.1.8"
+japanize-matplotlib = "^1.1.3"
+evaluate = "^0.2.2"
+sumeval = "<0.2.2"
+sentencepiece = "<0.1.97"
+openpyxl = "^3.0.10"
+fugashi = ">=1.2.0"
+ipadic = ">=1.0.0"
+transformers = ">=4.21.0"
+openai = "*"
+unidic-lite = "*"
+langchain = "0.0.201"
+sentence-transformers = "*"
+tiktoken = "*"
+pydantic = "1.10.9"
+annoy = "*"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "*"
