--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+OPENAI_API_KEY=
 AWS_DEFAULT_REGION=ap-northeast-1
 AWS_BUCKET=aces-vision
 CUDA_VISIBLE_DEVICES=0
